--- a/index.html
+++ b/index.html
@@ -229,14 +229,14 @@
                   appId: "1:361476401776:web:902ef14f83d990b63ae2b5",
                   measurementId: "G-JQ6K8G0Q49"
                 };
-                // Go to console.firebase.google.com -> Project Settings -> General -> "Your Apps" -> Config
                 const manualConfig = {
-                    apiKey: "REPLACE_ME",
-                    authDomain: "REPLACE_ME",
-                    projectId: "REPLACE_ME",
-                    storageBucket: "REPLACE_ME",
-                    messagingSenderId: "REPLACE_ME",
-                    appId: "REPLACE_ME"
+                    apiKey: "AIzaSyBlhwixxs7z1p9AMqrAv5cXkCne1SnRFlw",
+                    authDomain: "recmaths.firebaseapp.com",
+                    projectId: "recmaths",
+                    storageBucket: "recmaths.firebasestorage.app",
+                    messagingSenderId: "361476401776",
+                    appId: "1:361476401776:web:902ef14f83d990b63ae2b5",
+                    measurementId: "G-JQ6K8G0Q49"
                 };
 
                 let config;
