Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recmaths Voting Cloud</title>
+    <title>kekswettbewerb25 Voting Cloud</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         .rank-item { transition: all 0.2s; }
@@ -17,7 +17,7 @@
     <!-- LANDING SCREEN -->
     <div id="landing-screen" class="container mx-auto p-6 max-w-md mt-10">
         <div class="bg-white p-8 rounded-xl shadow-xl text-center">
-            <h1 class="text-3xl font-bold mb-2 text-indigo-700">🗳️ Recmaths Voting</h1>
+            <h1 class="text-3xl font-bold mb-2 text-indigo-700">🗳️ kekswettbewerb25 Voting</h1>
             <p class="text-slate-500 mb-8">Weighted Kemeny-Young System</p>
 
             <div class="space-y-4">
@@ -223,9 +223,9 @@
                 // --- 🛠️ YOUR FIREBASE CONFIG ---
                 const manualConfig = {
                     apiKey: "AIzaSyBlhwixxs7z1p9AMqrAv5cXkCne1SnRFlw",
-                    authDomain: "recmaths.firebaseapp.com",
-                    projectId: "recmaths",
-                    storageBucket: "recmaths.firebasestorage.app",
+                    authDomain: "kekswettbewerb25.firebaseapp.com",
+                    projectId: "kekswettbewerb25",
+                    storageBucket: "kekswettbewerb25.firebasestorage.app",
                     messagingSenderId: "361476401776",
                     appId: "1:361476401776:web:902ef14f83d990b63ae2b5",
                     measurementId: "G-JQ6K8G0Q49"
@@ -500,3 +500,4 @@
     </script>
 </body>
 </html>
+
