--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- LANDING SCREEN -->
     <div id="landing-screen" class="container mx-auto p-6 max-w-md mt-10">
         <div class="bg-white p-8 rounded-xl shadow-xl text-center">
-            <h1 class="text-3xl font-bold mb-2 text-indigo-700">kekswettbewerb25</h1>
+            <h1 class="text-3xl font-bold mb-2 text-indigo-700">Kekswettbewerb25</h1>
             <p class="text-slate-500 mb-8">Weighted Kemeny-Young System</p>
 
             <div class="space-y-4">
@@ -505,5 +505,6 @@
     </script>
 </body>
 </html>
+
 
 
